--- a/sections/_about.scss
+++ b/sections/_about.scss
@@ -6,13 +6,19 @@
 
 
 #about {
-    padding: 5%;
+    padding: 80px 5% 150px 5%;
     background-color: colors.$beige;
-    height: auto;
-    img{
-        width: 100%;
+    height: fit-content;
+    width: 100%;
+
+    .whole-wrap{
+        @include mixins.flex-center(row);
+        flex-wrap: wrap;
+        // border: 1px solid red;
+        max-width: 100%;
+        height:fit-content;
+        
     }
-    p{
-        padding: 5%;
-    }
+    
 }
+
