--- a/style.css
+++ b/style.css
@@ -68,15 +68,15 @@
 }
 
 .half1 {
-  width: auto;
+  width: 50%;
   height: fit-content;
-  min-width: 20%;
   max-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 2%;
+  justify-items: center;
 }
 
 .half2 {
@@ -84,12 +84,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 50%;
+  width: fit-content;
   height: auto;
 }
 
 .img-wrapper {
-  padding: 2px;
   max-height: 100%;
   max-width: 100%;
   display: flex;
@@ -102,23 +101,26 @@
   max-width: 100%;
   max-height: 100%;
   height: auto;
-  width: 100%;
+  width: fit-content;
   object-fit: contain;
+  justify-self: center;
+  align-self: center;
 }
 
 .text-wrapper {
-  height: 100%;
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 80px 0 150px 20px;
 }
 .text-wrapper p {
   max-width: 400px;
   max-height: 100%;
-  height: auto;
-  width: auto;
+  height: fit-content;
+  width: fit-content;
 }
 
 .caption-wrapper {
@@ -181,27 +183,29 @@ a:hover {
   justify-content: center;
   align-items: center;
   align-self: center;
-  height: 100%;
+  height: fit-content;
   width: 100%;
   margin: 0px;
-}
-#header .fullHeight {
-  height: 45vh;
+  padding: 0px 0 150px 0;
 }
 #header #button-wrap {
   margin: 10% 15% 10% 15%;
 }
 
 #about {
-  padding: 5%;
+  padding: 80px 5% 150px 5%;
   background-color: #d5d9b4;
-  height: auto;
-}
-#about img {
+  height: fit-content;
   width: 100%;
 }
-#about p {
-  padding: 5%;
+#about .whole-wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 100%;
+  height: fit-content;
 }
 
 #projects {
